--- a/src/components/Delivery/Delivery.scss
+++ b/src/components/Delivery/Delivery.scss
@@ -114,6 +114,7 @@
                 font-size: 32px;
                 line-height: 103.4%;
                 color: #490705;
+                margin-bottom: 12px;
             }
 
             &__description {
