--- a/src/components/Recall/Recall.scss
+++ b/src/components/Recall/Recall.scss
@@ -45,7 +45,8 @@
             &__text {
                 margin-right: 100px;
                 margin: 100px;
-
+                position: relative;
+                left: 30px;
                 &__title {
                     font-family: Gilroy;
                     font-style: normal;
