--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -76,6 +76,8 @@
                         p {
                             font-family: Gilroy;
                             font-style: normal;
+                            width: 252px;
+                            margin:0 auto;
                             font-weight: 500;
                             font-size: 15px;
                             line-height: 18px;
