--- a/src/App.scss
+++ b/src/App.scss
@@ -41,3 +41,46 @@
         font-family: Gilroy;
     }
 }
+
+
+@media screen and (max-width:1150px) {
+    .App {
+        overflow: hidden;
+        font-family: Gilroy;
+    
+        .container {
+            max-width: 90%;
+            margin: 0 auto;
+        }
+        .main-block {
+            min-height: fit-content;
+        }
+    
+        .btn {
+            border: none;
+            background: linear-gradient(180deg, #D14F4C 0%, #7F2321 51.26%, #5E1210 77.55%, #490705 100%);
+            box-shadow: 0px 4.08772px 16.3509px rgba(128, 21, 19, 0.6);
+            border-radius: 40.8772px;
+            color: #FFFFFF;
+            font-family: Gilroy;
+    
+            span {}
+    
+            img {
+                display: inline;
+                vertical-align: middle;
+                margin-right: 10px;
+            }
+        }
+    
+        .btn-o {
+            border: none;
+            background: #fff;
+            border-radius: 40.8772px;
+            border: 0.639257px solid #000000;
+            box-sizing: border-box;
+            color: #000;
+            font-family: Gilroy;
+        }
+    }
+}
