--- a/src/components/BackCall/BckCall.scss
+++ b/src/components/BackCall/BckCall.scss
@@ -6,8 +6,8 @@
     align-items: center;
     justify-content: start;
     background: url('./../../imgs/fog.png') bottom no-repeat,
-    url('./../../imgs/chefBackCall.png')  55% no-repeat,
-    url('./../../imgs/milk.png')  right no-repeat;
+        url('./../../imgs/chefBackCall.png') 55% no-repeat,
+        url('./../../imgs/milk.png') right no-repeat;
     // #000;
 
     // flex-direction: column-reverse;
@@ -22,6 +22,7 @@
     }
 
     .milk-holder {
+
         // float: right;
         .milkPNG {}
     }
@@ -110,6 +111,110 @@
                 box-sizing: border-box;
                 filter: drop-shadow(0px 5px 20px rgba(128, 21, 19, 0.6));
                 border-radius: 50px;
+            }
+        }
+    }
+}
+
+@media screen and(max-width:1150px) {
+    .backcall {
+        height: fit-content;
+        min-height: 1000px;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        background: url('./../../imgs/fog.png') bottom no-repeat,
+            url('./../../imgs/chefBackCall.png') 55% no-repeat,
+            url('./../../imgs/milk.png') right no-repeat;
+
+        .wrap {
+            margin-left: 10%;
+        }
+
+        .chef {
+            position: relative;
+            z-index: -1;
+        }
+
+        &__imag {
+            // position: absolute;
+            position: static;
+            display: inline;
+
+            img {
+                position: relative;
+                display: inline;
+                top: 250px;
+            }
+        }
+
+        &__form {
+            // align-self: center;
+            width: 436px;
+            height: 516px;
+            background: #FFFFFF;
+            box-shadow: 0px 3.6686px 22.0116px rgba(0, 0, 0, 0.25);
+            border-radius: 4.58575px;
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+
+            &__text {
+                text-align: center;
+                width: 373px;
+                align-self: center;
+                justify-self: center;
+
+                &__title {
+                    font-weight: 800;
+                    font-size: 40.8293px;
+                    line-height: 50px;
+                }
+
+                &__description {
+                    font-size: 18px;
+                    line-height: 22px;
+                    text-align: center;
+                }
+            }
+
+            &__input {
+                align-self: center;
+                display: grid;
+                row-gap: 15px;
+
+                &__number {
+                    width: 377px;
+                    height: 91px;
+                    justify-self: center;
+                    border: 1px solid #000000;
+                    box-sizing: border-box;
+                    // filter: drop-shadow(0px 5px 20px rgba(128, 21, 19, 0.6));
+                    border-radius: 50px;
+
+                    &::placeholder {
+                        padding-left: 40px;
+                    }
+
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 22px;
+                    color: #A4A4A4;
+                }
+
+                &__button {
+                    width: 377px;
+                    height: 91px;
+                    font-weight: bold;
+                    font-size: 20px;
+                    line-height: 25px;
+                    text-align: center;
+                    justify-self: center;
+                    border: 1px solid #000000;
+                    box-sizing: border-box;
+                    filter: drop-shadow(0px 5px 20px rgba(128, 21, 19, 0.6));
+                    border-radius: 50px;
+                }
             }
         }
     }
