--- a/src/components/Catalog/Catalog.scss
+++ b/src/components/Catalog/Catalog.scss
@@ -31,6 +31,47 @@
             font-size: 29px;
         }
     }
+}
 
-    
+@media screen and(max-width:1150px) {
+    .catalog {
+        height: 900px;
+        background-color: #fff;
+        background: url('./../../imgs/underHeader.png'),
+            url('./../../imgs/raspberry_catalog.png') (top 200px) right no-repeat;
+        background-size: contain, 150px auto;
+        background-repeat: no-repeat;
+
+        &__raspberry {
+            // display: flex;
+            // flex-direction: column-reverse;
+            // align-self: center;
+            top: 180px;
+            position: relative;
+            float: right;
+            display: none;
+            // left: 90%;
+        }
+
+        &__text {
+            text-align: center;
+
+            &__title {
+                font-family: Gilroy;
+                font-weight: bold;
+                font-size: 48px;
+                color: #272727;
+                padding-top: 185px;
+                margin: 0;
+            }
+
+            &__description {
+                font-family: Gilroy;
+                margin-top: 23px;
+                font-size: 24px;
+            }
+        }
+
+
+    }
 }
