Updated mobile version

--- a/src/components/AboutProduct/AboutProduct.scss
+++ b/src/components/AboutProduct/AboutProduct.scss
@@ -92,7 +92,7 @@
             margin: 0;
             text-align: center;
             position: relative;
-            left: 50px;
+            // left: 50px;
             // margin-left: 0;
         }
 
