--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 @import './fonts/gilroy/stylesheet.css';
 @import './fonts/P22_Underground/stylesheet.css';
 
+body {
+    margin: 0;
+  }
+  
 .App {
     overflow: hidden;
     font-family: Gilroy;
