--- a/src/components/Academy/Academy.scss
+++ b/src/components/Academy/Academy.scss
@@ -205,3 +205,16 @@
         }
     }
 }
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .academy__text__title {
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .academy__text__description {
+        font-size: 20px;
+        text-align: center;
+    }
+}
