--- a/src/components/BackCall/BckCall.scss
+++ b/src/components/BackCall/BckCall.scss
@@ -88,6 +88,7 @@
                 box-sizing: border-box;
                 // filter: drop-shadow(0px 5px 20px rgba(128, 21, 19, 0.6));
                 border-radius: 50px;
+                text-align: center;
 
                 &::placeholder {
                     padding-left: 40px;
