--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -33,6 +33,11 @@
             font-weight: 500;
             font-size: 20px;
             list-style-type: none;
+
+            &_item {
+                text-decoration: none;
+                color: #000000;
+            }
         }
     }
 
