--- a/src/components/Questions/Questions.scss
+++ b/src/components/Questions/Questions.scss
@@ -56,3 +56,14 @@
         }
     }
 }
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .questions__title {
+        font-size: 35px;
+        line-height: inherit;
+        text-align: center;
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+}
